sam-internal/k8s-out/lo3/lo3-sam/istio-config-global-sidecar-phase3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  annotations:
    manifestctl.sam.data.sfdc.net/swagger: disable
    niko/fake.change.for.redeploy: "3"
  name: mesh-default
  namespace: mesh-control-plane
spec:
  egress:
  - hosts:
    - mesh-control-plane/*
    - z9s-default/*
    - app/*
    - funnel/*
    - service-mesh/*
    - ccait/*
    - gater/*
    - search-scale-safely/*
    - universal-search/*
    - gateway/*
    port:
      name: grpc-tls
      number: 7443
      protocol: GRPC
  - hosts:
    - mesh-control-plane/*
    - z9s-default/*
    - app/*
    - funnel/*
    - service-mesh/*
    - ccait/*
    - gater/*
    - search-scale-safely/*
    - universal-search/*
    - gateway/*
    port:
      name: http-tls
      number: 7442
      protocol: HTTP
  - hosts:
    - mesh-control-plane/*
    - z9s-default/*
    - app/*
    - funnel/*
    - service-mesh/*
    - ccait/*
    - gater/*
    - search-scale-safely/*
    - universal-search/*
    - gateway/*
    port:
      name: http-plain
      number: 7014
      protocol: HTTP
  - hosts:
    - mesh-control-plane/*
    - z9s-default/*
    - app/*
    - funnel/*
    - service-mesh/*
    - ccait/*
    - gater/*
    - search-scale-safely/*
    - universal-search/*
    - gateway/*
    port:
      name: grpc-plain
      number: 7012
      protocol: GRPC
